added logec50 and max values to integrin and pselectin data for bariatric surgery section. Made some edits to DiRECT chapter.

--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -86,7 +86,11 @@ Sledz, K. M., Moore, S. F., Vijayaragavan, V., Mallah, S., **Goudswaard, L. J.**
 
 **Elizabeth Blackwell Institute Mechanisms to Populations**, 2021, Virtual meeting. Title: Exploring the effect of BMI on platelet function: an interdisciplinary study (Oral presentation)
 
+**Bristol Heart Institute Meeting**, 2021, Virtual meeting. Title: Combining Mendelian randomisation and randomised control trial study designs to determine effects of adiposity on the plasma proteome (Oral presentation).
+
 ## Awards and prizes
+
+**Best talk in epidemiology category**, 2021, Bristol Heart Institute Meeting
 
 **Poster prize - 2nd place**, 2021, International Genetic Epidemiology Society.
 
