--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -1,12 +1,18 @@
 # The effect of obesity on platelet function: a clinical pilot study {#BMI-platelets-clinic}
 
-The following results section is a clinical study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data, which was collected by Dr Kate Burley. Help was required here due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol. Methods have been used within a study to explore the effect of COVID-19 on platelet function given the increased risk of thrombosis. This has been written up as a manuscript but will not be included in the thesis due to not aligning with the current aims.
+The following results section is a specifically designed patient study. Recruitment into this study has been severely affected by COVID-19: approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data, which was collected by Dr Kate Burley. Help was required here due to time constraints when receiving patient samples. The proteomic data was analysed by the Proteomics facility at the University of Bristol. Methods have been used within a study to explore the effect of COVID-19 on platelet function given the increased risk of thrombosis. This has been written up as a manuscript but will not be included in the thesis due to not aligning with the current aims.
 
 ## Background
 
-As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis [@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. 
+As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis [@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available.
 
-Upon activation, platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors. Some receptors are increasingly exposed upon stimulation such as the integrin α~IIb~β~3~ which is important for aggregation, as well as the adhestion receptor P-selectin. Platelet agonists which are able to increase the expression of these receptors include PAR1-AP, ADP and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein or phosphoprotein levels. 
+Upon activation, platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function [@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors. Some receptors are increasingly exposed upon stimulation such as the integrin α~IIb~β~3~, which is important for aggregation of platelets \@ref(fig:platelet-activation-2) as well as the adhestion receptor P-selectin. Platelet agonists which are able to increase the expression of these receptors include PAR1-AP, ADP and collagen-related peptide (CRP). Other experiments commonly used include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation [@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein or phosphoprotein levels. 
+
+(ref:scaption-platelet-diagram) Cartoon of the integrin α~IIb~β~3~ and P-selectin on platelets.
+(ref:caption-platelet-diagram) Cartoon of the integrin α~IIb~β~3~ and P-selectin expression on platelets. Upon platelet activation, the integrin α~IIb~β~3~ cross-links platelets via fibrinogen, whereas P-selectin on platelets can bind to PSGL-1 leukocytes. 
+```{r platelet-activation-2, echo = FALSE, fig.cap="(ref:caption-platelet-diagram)", fig.scap="(ref:scaption-platelet-diagram"}
+include_graphics(path = "figure/Bariatric_study/Platelet_activiation_integrin_p-selectin.png", dpi = NA)
+```
 
 Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling [@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007], where there is mixed evidence regarding how BMI affects platelet function. Previous studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). In these studies there is evidence that in people with higher BMI, antiplatelet drugs such as prasugrel, which acts at the P2Y12 receptor, may not be as effective at suppressing platelet activity [@Deharo2014]. Many studies have focused on measuring phospho-VASP as an indicator of platelet function at the P2Y12 receptor, where higher phospho-VASP levels are indicative of less inhibition by the antiplatelet drug. It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy and across other platelet function assays.
 
@@ -52,7 +58,7 @@ Platelet traits measured by Sysmex were compared across bariatric and control gr
 
 ```{r obesity-platelets-parameters,  echo=FALSE}
 options(knitr.kable.NA = "")
-f = c("Platelet count", "Immature platelet fraction", "Immature platelet count", "Side fluorescence", "Forward scatter", "Side scatter")
+f = c("Platelet count (PLT)", "Immature platelet fraction (IPF)", "Immature platelet count (IPC)", "Side fluorescence (SFL)", "Forward scatter (FSC)", "Side scatter (SSC)")
 co = c("257.8 (29.1)", "3.8 (2.3)", "9.3 (4.9)", "82.0 (5.8)", "53.8 (5.5)", "40.3 (1.1)")
 i = c("235.8 (61.5)", "7.3 (8.3)", "16.3 (16.3)", "85.1 (9.8)", "60.5 (8.8)", "41.8 (3.0)")
 p <- c(0.54,0.44,0.45,0.61,0.24,0.37) 
@@ -80,10 +86,10 @@ include_graphics(path = "figure/Bariatric_study/Basal_surface_receptors.pdf", dp
 
 ### Agonist-induced integrin α~IIb~β~3~ and P-selectin expression
 
-Markers of platelet activation were compared in response to different platelet agonists. There was no difference in the levels of the integrin α~IIb~β~3~ or P-selectin across bariatric patients and control groups in response to PAR1-AP, ADP or CRP (Figures \@ref(fig:agonist-integrin-pselectin)A-F), as determined by the logEC50 or the curve maximum values.
+Markers of platelet activation were compared in response to different platelet agonists. There was no difference in the levels of P-selectin across bariatric patients and control groups in response to PAR1-AP or ADP (Figures \@ref(fig:agonist-integrin-pselectin)A-D), as determined by the logEC50 or the curve maximum values. In contrast to this, there was weak evidence that the integrin α~IIb~β~3~ maximum response was reduced in the bariatric patient group in response to PAR1-AP (2479 AU (SEM 126) in control vs 2105 AU (SEM 101) in bariatric group, p=0.06) and ADP (2526 AU (SEM 121) in control group vs 2274 AU (SEM 478), p=0.05), but there was no change in the logEC50s acorss groups. There was insufficient data to compare the logEC50s and max of the curves for CRP, however comparing the highest concentration of CRP, there was no difference in response across the bariatric and control group (Figures \@ref(fig:agonist-integrin-pselectin)E and F).
 
-(ref:scaption2) Concentration-response curves of integrin α~IIb~β~3~ activation and P-selectin expression
-(ref:caption2) Concentration-response curves of integrin α~IIb~β~3~ activation in platelet rich plasma diluted in HEPES-Tyrode's in response to A) PAR1-AP, B) ADP and C) CRP. Concentration-response curves of P-selectin expression in response to D) PAR1-AP, E) ADP, F) CRP. N=4. Mean ± SEM displayed.
+(ref:scaption2) Concentration-response curves of integrin α~IIb~β~3~ activation and P-selectin expression for bariatric patient and control groups
+(ref:caption2) Concentration-response curves of integrin α~IIb~β~3~ activation in platelet rich plasma diluted in HEPES-Tyrode's in response to A) PAR1-AP, B) ADP and C) CRP. Concentration-response curves of P-selectin expression in response to D) PAR1-AP, E) ADP, F) CRP. N=4. Mean ± SEM displayed. P values are the comparison of either the logEC50 or the maximum of the curve for the individual concentration-response curves across the bariatric patient and control groups. For CRP, the p value for an unpaired two-tailed t-test comparing the response to 1x10^-5^ g/mL CRP across the bariatric patient and control groups is displayed.
 
 ```{r agonist-integrin-pselectin, out.width = "95%",echo = FALSE, fig.cap="(ref:caption2)", fig.scap= "(ref:scaption2)"}
 include_graphics(path = "figure/Bariatric_study/Agonist_Integrin_Pselectin.pdf", dpi = NA)
