--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -31,7 +31,7 @@ Fresh human venous blood was obtained from healthy volunteers by venipuncture. B
 Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT), immature platelet fraction (IPF), immature platelet count (IPC), side fluorescence (SFL, a measure of mRNA content), forward scatter (FSC, a measure of platelet size), side scatter (SSC, a measure of granularity).
 
 ### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
-Isolated PRP was diluted 1:40 in HEPES Tyrode's. Washed platelets were diluted to a concentration of 2 x 10^7^/mL using supplemented HEPES Tyrode’s buffer with FITC-conjugated PAC1 and PE-conjugated CD62P antibodies in a 2:1 ratio. For patien studies, master mix was added to pre-prepared vacuum packed 96 well plates to a final folume of 50 uL. Agonists used were PAR1-AP, ADP and CRP, which were freeze-dried onto the plates [@Chan2018], as well as HEPES Tyrode's which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. For platelet priming experiments platelets were incubated with 200 ng/ml MDC, TARC or vehicle for 5 mins followed by stimulation with increasing concentrations for 10 minutes. Platelets were fixed with 1 % paraformaldehyde (PFA) for 10 minutes. Plates were analysed using the BD Accuri C6 Plus flow cytometer (BD Biosciences, Wokingham, UK), where the median fluorescence intensity was derived from 10,000 gated platelets. 
+Isolated PRP was diluted 1:40 in HEPES Tyrode's. Washed platelets were diluted to a concentration of 2 x 10^7^/mL using supplemented HEPES Tyrode’s buffer with FITC-conjugated PAC1 and PE-conjugated CD62P antibodies in a 2:1 ratio. For patient studies, master mix was added to pre-prepared vacuum packed 96 well plates to a final folume of 50 uL. Agonists used were PAR1-AP, ADP and CRP, which were freeze-dried onto the plates [@Chan2018], as well as HEPES Tyrode's which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. For platelet priming experiments platelets were incubated with 200 ng/ml MDC, TARC or vehicle for 5 mins followed by stimulation with increasing concentrations for 10 minutes. Platelets were fixed with 1 % paraformaldehyde (PFA) for 10 minutes. Plates were analysed using the BD Accuri C6 Plus flow cytometer (BD Biosciences, Wokingham, UK), where the median fluorescence intensity was derived from 10,000 gated platelets. 
 
 ### Surface receptor levels measured by flow cytometry
 Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibody was added (1:10 v/v) to a final volume of 50 uL. Antibodies used include anti-human CD41, CD42b, CD61 (FITC-conjugated) and GPVI and CD110 (PE-conjugated). Platelets were gated and the median fluorescence was reported from a total of 10,000 events. 
