--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -1,5 +1,7 @@
 # Discussion
 
+The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma protoeme and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in summary Figure \@ref(fig:Thesis-schematic-chaps).
+
 ## Overall findings - table or figure ???
 
 ```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored", fig.scap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers"}
